# SQLiteCpp

./: .travis.yml  CMakeLists.txt  README.md
bii/: dependencies.bii  parents.bii  paths.bii  requirements.bii
examples/example1/: main.cpp
tests/: Database_test.cpp  Statement_test.cpp
